# Books_Recommendation_Platform

./: .gitignore  README.md  pyproject.toml
Book_Rec/: app.py  requirements.txt
Book_Rec/data/: info2idx_convert_data.pkl
Book_Rec/model/: README.md
Book_Rec/src/: __init__.py  data_loader.py  info2idx.py  model_loader.py  predict.py
