[tool.poetry]
name = "streamlit-prototype"
version = "0.1.0"
description = ""
authors = ["Brother_gyu <brothergyu98@gmail.com>"]
readme = "README.md"
packages = [{include = "Book_Rec"}]

[tool.poetry.dependencies]
python = ">=3.8.16,<3.9.7 || >3.9.7,<4.0.0"
streamlit = "^1.21.0"
pandas = "^1.2.5"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
